--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,16 @@
 html {
     overflow: scroll;
     -webkit-overflow-scrolling: touch;
-}
+    height: auto;
+    }
 
 body {
-    background-color: #fafdfd;
-   overflow: hidden;
+   background-color: #fafdfd;
    margin: 0px;
-   height: 100vh;
+   height: 100%;
 }
+
+
 
 h1 /* Figma text style: NEWS, Arial bold 36  */ {
         font-family: Arial;
@@ -92,9 +94,42 @@ p /* Figma text style TEXT, Georgia, regular 14*/{
 
 
 
+.button1 {
+    color:#FAFDFD;
+    background: #F23E2E; 
+    display: inline-flex;
+    flex-shrink: 0; 
+    padding: 2% 4%;
+    justify-content: center;
+    align-items: center;
+    gap: 12.1px;
+    flex-shrink: 0; 
+    border-radius: 30px;
+    text-decoration: none; 
+    font-family: Arial;
+    font-style: bold;
+    font-weight: 700;
+    line-height: normal; 
 
 
+    
+}
 
+.button2 {
+    display: inline-flex;
+    padding: 10px 28px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px; 
+    border-radius: 30px;
+    background: #F23E2E; 
+    text-decoration: none; 
+    font-family: Arial;
+    font-style: bold;
+    font-weight: 700;
+    line-height: normal; 
+    color:#FAFDFD;
+}
 
 
 
@@ -126,10 +161,7 @@ p /* Figma text style TEXT, Georgia, regular 14*/{
 header {
     border-top: 2px solid #053641;
     border-bottom: 2px solid #053641;    
-    grid-template-columns: 143 143 143;
-    grid-template-rows: auto;
-    grid-template-areas: 
-    "logo logo button";
+
     max-width: 1440px;
     flex-shrink: 0; 
     background: var(--Bakgrunn, #FAFDFD); 
@@ -274,29 +306,14 @@ width: 100%;
         background-size: cover;
 
         
-}
- 
-
-
-.button1 {
-    font-style: bold;
-    color:#FAFDFD;
-    background: #F23E2E; 
-    display: inline-flex;
-    height: 23px;
-    padding: 4.84px 12.1px;
-    justify-content: center;
-    align-items: center;
-    gap: 12.1px;
-    flex-shrink: 0; 
-    border: 0.242px solid #053641;
+} 
+#homepage-banner .button1 {
     position: relative;
     top: 75%;
-    left: 8%;
-    border-radius: 14.906px; 
+    left: 5%;
 
-    
 }
+
 
 
 .content {
@@ -322,6 +339,7 @@ width: 100%;
     border-radius: 3px;
     position: relative;
     margin-bottom: 5px;
+    
 }
 .product img {
     align-items: right;
@@ -350,7 +368,56 @@ margin-bottom: 2%;
 .homepageads {
     
     grid-column: span 2;
+    
 }
+
+#homepageads1 {
+    position:relative;
+}
+#homepageads1 .button1 {
+    position: absolute;
+    bottom: 10%;
+    left: 40%;
+}
+
+#homepageads2 {
+    position:relative;
+}
+#homepageads2 .button2 {
+    position: absolute;
+    bottom: 10%;
+    left: 10%;
+}
+
+
+footer {
+    border-top: 2px solid #053641;
+    border-bottom: 2px solid #053641;    
+
+    max-width: 1440px;
+    flex-shrink: 0; 
+    background: var(--Bakgrunn, #FAFDFD); 
+        
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media only screen and (min-width: 600px) {
     h1 /* Figma text style: NEWS, Arial bold 36  */ {
@@ -365,7 +432,6 @@ margin-bottom: 2%;
     
     
 
-        
     }
 }
 
