--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,9 @@ body {
    height: 100%;
 }
 
-
+img {
+    line-height: 0;
+    display: block;}
 
 h1 /* Figma text style: NEWS, Arial bold 36  */ {
         font-family: Arial;
@@ -71,9 +73,9 @@ p /* Figma text style TEXT, Georgia, regular 14*/{
 }
 
 
+li {list-style: none;}
 
-
-
+ul {padding: 0px;}
 
 
 
@@ -169,13 +171,9 @@ header {
   }
 
 .logo {
-    display: flex;
-    max-width: 284px;
-    max-height: 160px;
-    justify-content: center;
-    align-items: center;
-    flex-shrink: 1; 
-    z-index: 1000;
+    max-width: 100%;
+    max-height: 100%;
+
 }
 
 
@@ -195,14 +193,14 @@ header {
 
 ul {margin: 0px;}
 
-nav,
+.headernav,
 #menu-checkbox {
     display: none;
   }
 
 
 
-#menu-checkbox:checked ~ nav {
+#menu-checkbox:checked ~ .headernav {
     display: inline-block;
 
     
@@ -382,6 +380,7 @@ margin-bottom: 2%;
 
 #homepageads2 {
     position:relative;
+    margin-bottom: 0px;
 }
 #homepageads2 .button2 {
     position: absolute;
@@ -391,19 +390,111 @@ margin-bottom: 2%;
 
 
 footer {
+    margin-top: 0px;
     border-top: 2px solid #053641;
     border-bottom: 2px solid #053641;    
-
     max-width: 1440px;
     flex-shrink: 0; 
     background: var(--Bakgrunn, #FAFDFD); 
-        
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 1fr 0.8fr 31px;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px; 
+   
+
+  }
+
+  .footerlogo {
+    grid-row: 1;
+    grid-column: 1 / span 3;
+  }
+
+  .footernav {
+    grid-row: 1;
+    grid-column: 3 / span 2;
+    margin-top: 15px;
+    margin-left: 40%;
+    margin-bottom: 20px;
+       
+    }
+  .footernav li a /* Figma text style BUTTONS, arial bold 14  */ {
+    font-family: Arial;
+    font-size: 0.875rem;
+    font-style: bold;
+    font-weight: 700;
+    line-height: normal; 
+    color:#053641;
+    text-decoration: none;
+    padding: 2px 2px 2px 2px;
+    
+    
+}
+.footernav ul li:not(:last-child) {
+    margin: 6px 0px 6px 0px;
+}
+
+.info {
+    grid-row: 2;
+    grid-column: 1 / span 2;
+    margin-left: 12%;
+    }
+.info h3 {margin-bottom: 5px;}
+
+  .socials {
+    grid-row: 2;
+    grid-column: 3 / span 2;
+    margin-left: 40%;
+    align-items: center;
+  }
+  .socials img {
+    margin-bottom: 5px;
+    margin-top: 5px;    
+}
+#youtube {margin-left: 17%;}
+#facebook {margin-left: 26%;}
+#mailto {margin-left: 20%;}
+  
+
+
+
+
+
+
+.bunn {
+    grid-column: 1 / 5;
+    background: #053641;
+    grid-row: 3;
+    height: 31px;
+    text-align: center;
+    place-items: center;
+  }
+  .bunn p {
+    color: rgba(250, 253, 253, 0.70);
+    font-family: Arial;
+    font-size: 0.800rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal; 
+    display: inline-block;
+    margin: 1%;
   }
 
 
 
 
 
+
+@media only screen and (max-width: 380px) {
+    .footerlogo {
+        max-width: 230px;
+        max-height: 124px;
+    }
+
+    .bunn p {font-size: 0.700rem;}
+}
+@media only screen and (max-width: 335px) {
+    .bunn p {font-size: 0.600rem;}}
 
 
 
@@ -421,7 +512,7 @@ footer {
 
 @media only screen and (min-width: 600px) {
     h1 /* Figma text style: NEWS, Arial bold 36  */ {
-        font-family: Arial;
+    font-family: Arial;
     font-size: 2.25rem;
     font-style: normal;
     font-weight: 700;
@@ -429,10 +520,21 @@ footer {
     color:#053641;
     margin-top: 0px;
     margin-bottom: 0px;
-    
-    
-
     }
+
+    .headernav {
+    display: inline-block;
+
+    
+    
+    background: var(--Bakgrunn, #FAFDFD); 
+    
 }
 
+#hamburger {
+display: none;
+}
+
+
+}
 
