--- a/css/styles.css
+++ b/css/styles.css
@@ -2,13 +2,32 @@ html {
     overflow: scroll;
     -webkit-overflow-scrolling: touch;
     height: auto;
+    
     }
 
 body {
    background-color: #fafdfd;
-   margin: 0px;
+   max-width: 1050px;
+   margin: 0 auto !important;
    height: 100%;
 }
+
+
+.currentpage {
+    text-decoration: underline!important;
+}
+
+
+.form {    min-height: 37px; 
+    
+    margin-left: 10%;
+    margin-top: 24px;
+    flex-shrink: 0; 
+    border-radius: 5px;
+    border: 1px solid var(--Logo-farge, #053641);
+    background: #FFF; 
+    padding: 5%;}
+
 
 img {
     line-height: 0;
@@ -164,7 +183,7 @@ header {
     border-top: 2px solid #053641;
     border-bottom: 2px solid #053641;    
 
-    max-width: 1440px;
+    max-width: 100%;
     flex-shrink: 0; 
     background: var(--Bakgrunn, #FAFDFD); 
         
@@ -209,14 +228,28 @@ ul {margin: 0px;}
     
 }
 
+.dropdown {
+    min-height: 37px; 
+    min-width: 160px;
+    margin-left: 5%;
+    margin-top: 10px;
+    flex-shrink: 0; 
+    border-radius: 5px;
+    border: 1px solid var(--Logo-farge, #053641);
+    display: block;
+    background: #FFF; 
+    
+}
+
+
 
 .searchbox {
     /* position: absolute; */
     /* top: 188px; */
     /* left: 37.5px; */
-    min-width: 50%;
+    /* min-width: 50%; */
     min-height: 37px; 
-
+    
     margin-left: 10%;
     margin-top: 24px;
     flex-shrink: 0; 
@@ -315,15 +348,16 @@ width: 100%;
 
 
 .content {
+    margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     
 }
 
 .content h1 {
     margin-top: 5%;
     text-align: center;
-    grid-column: span 2;
+    grid-column: span 4;
 }
 
 
@@ -337,6 +371,8 @@ width: 100%;
     border-radius: 3px;
     position: relative;
     margin-bottom: 5px;
+    grid-column: span 2;
+    
     
 }
 .product img {
@@ -365,7 +401,7 @@ margin-bottom: 2%;
 }
 .homepageads {
     
-    grid-column: span 2;
+    grid-column: span 4;
     
 }
 
@@ -393,7 +429,7 @@ footer {
     margin-top: 0px;
     border-top: 2px solid #053641;
     border-bottom: 2px solid #053641;    
-    max-width: 1440px;
+    max-width: 100%;
     flex-shrink: 0; 
     background: var(--Bakgrunn, #FAFDFD); 
     display: grid;
@@ -510,7 +546,66 @@ footer {
 
 
 
+
 @media only screen and (min-width: 600px) {
+
+
+
+
+
+    
+#hamburger {
+    display: none;
+    }
+
+
+    .button1 {
+        color:#FAFDFD;
+        background: #F23E2E; 
+        display: inline-flex;
+        padding: 2% 4%;
+        justify-content: center;
+        align-items: center;
+        gap: 12.1px;
+        border-radius: 30px;
+        text-decoration: none; 
+        font-family: Arial;
+        font-weight: 700;
+        line-height: normal; 
+    
+    
+        
+    }
+    
+    .button2 {
+        display: inline-flex;
+        padding: 10px 28px;
+        justify-content: center;
+        align-items: center;
+        gap: 10px; 
+        border-radius: 30px;
+        background: #F23E2E; 
+        text-decoration: none; 
+        font-family: Arial;
+        font-style: bold;
+        font-weight: 700;
+        line-height: normal; 
+        color:#FAFDFD;
+    }
+    
+
+
+
+
+
+
+
+body {
+    max-width: 1050px;
+    margin: 0 auto !important;
+    }
+
+
     h1 /* Figma text style: NEWS, Arial bold 36  */ {
     font-family: Arial;
     font-size: 2.25rem;
@@ -522,19 +617,256 @@ footer {
     margin-bottom: 0px;
     }
 
-    .headernav {
-    display: inline-block;
+    header .logo {
+        max-width: 284px;
+        max-height: 160px;
+        grid-row: 1 / span 2;
+        float: left;
+        z-index: 2;
+        }
 
-    
-    
+
+
+header {display: grid;
+    grid-template-columns: 30% 70%;
+    grid-template-rows: 50% 50%;
+   
+}
+.headernav {
+    grid-column: 2;
+    grid-row: 1 / span 2;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 70px 30px;
+    z-index: 1;
     background: var(--Bakgrunn, #FAFDFD); 
+    }
+
+
+
+
+
+.searchbox {
+    
+    
+    width:  50%;
+    height: 37px;
+    margin-left: 10%;
+    border-radius: 5px;
+    border: 1px solid var(--Logo-farge, #053641);
+    background: #FFF; 
+    background-image: url(../images/Search-icon.svg);
+    background-repeat: no-repeat;
+    background-position-x: 95%;
+    background-position-y: 6px;
+    grid-column: 1 / span 1;
+    grid-row: 1 / span 1;
+}
+
+.searchboxgrid {display:grid;
+grid-template-columns: 85% 15%}
+
+
+.profile-icon {
+    max-width: 24px;
+    max-height: 24px;
+    position: unset;
+    grid-column: 2 / span 1;
+    grid-row: 1 / span 1;
+    
+    align-self: end;
+    justify-self: center;
+    margin-right: 50%;
+     
+}
+
+.cart-icon {
+    max-width: 24px;
+    max-height: 24px;
+    position: unset;
+    grid-column: 2 / span 1;
+    grid-row: 1 / span 1;
+    align-self: end;
+    justify-self: end;
+    margin-right: 10%;
+
+
+}
+/* 
+.headernav {
+width: 100%;
+} */
+
+.headernav {
+    border-top: none;
+    width: 100%;
+    margin: auto;
     
 }
 
-#hamburger {
-display: none;
+.headernav li {
+    margin-top: 24px;
+    
+    margin-bottom: 17px; 
+    padding: 1px 2px 1px 2px;
+    margin-left: 0%;
+    margin-right: 5%;
+    grid-column: 1 / span 1;
+    grid-row: 2 / span 1;
+    
+
+    
+}
+
+#topnav-ul {
+    width: 50%;
+    justify-content: left;
+    padding: 0px;
+    grid-column: 1 / span 2;
+    grid-row: 2 / span 1;
+    margin-left: 8.5%;
 }
 
 
+
+
+
+
+
+
+
+#homepage-banner {
+    background: url(../images/homepage_bannerEDIT.jpg) no-repeat;
+    background-size:contain;
+    width: 1049px;
+    height: 470px; 
+    background-size: cover;
+    margin: 0 auto;
+
+    
+} 
+#homepage-banner .button1 {
+position: relative;
+top: 75%;
+left: 5%;
+
 }
 
+
+.content h1 {grid-column: span 4;
+text-align: left;}
+
+.product {
+    max-width: 95%;
+    margin-left: 1%;
+    margin-top: 5%;
+    align-items: center;
+    border-radius: 3px;
+    border: 1px solid rgba(173, 173, 173, 0.60);
+    border-radius: 3px;
+    position: relative;
+    margin-bottom: 5px;
+    grid-column: span 1;
+    
+    
+}
+
+
+.homepageads {
+    
+    grid-column: span 2;
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* footer-shit */ 
+
+.footerlogo {
+    margin-top: 5px;
+    grid-row: 1;
+    grid-column: 1 / span 3;
+  }
+
+  .footernav {
+    grid-row: 1;
+    grid-column: 2 / span 1;
+    margin-top: 15px;
+    margin-left: 40%;
+    margin-bottom: 20px;
+       
+    }
+
+    
+    
+
+
+
+  .socials {
+    margin-top: 15px;
+    grid-row: 1;
+    grid-column: 3 / span 1;
+    margin-left: 40%;
+    align-items: center;
+  }
+    #youtube {margin-left: 17%;}
+    #facebook {margin-left: 26%;}
+    #mailto {margin-left: 20%;}
+
+
+  .info {
+    margin-top: 15px;
+    grid-row: 1;
+    grid-column: 4 / span 1;
+    margin-left: 12%;
+    }
+
+    .bunn {
+       grid-row: 2;
+    }
+}
+
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media only screen and (min-device-width: 601px) and (max-device-width: 1070px) {
+    
+    header .logo img {
+        max-width: 230px;
+        max-height: 124px;
+        }
+    .footerlogo {max-width: 230px;
+        max-height: 124px;
+    }    
+
+    .button1 {
+        font-weight: 400;
+    }
+.button2 {
+    font-weight: 400;
+}
+
+}
