--- a/css/product-specific.css
+++ b/css/product-specific.css
@@ -4,7 +4,7 @@ border: 1px solid #ADADAD;
 background: linear-gradient(0deg, rgba(173, 173, 173, 0.20) 0%, rgba(173, 173, 173, 0.20) 100%), url(<path-to-image>), lightgray 50% / cover no-repeat;
 grid-column: 1 / span 4;
     max-width: 100%;
-    height: 100%;
+    max-height: 100%;
        
 }
 
@@ -114,4 +114,4 @@ grid-column-start:auto;}
 
 
  }
-}
+ }}
